# quati

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  ISSUES.md  README.md  pypi_build_upload.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml  issue_template.yaml
doc/: DOCUMENTATION.md  data.md  gooogle.md  header.md  logger.md  messenger.md  navigation.md  scrapping.md  system.md
quati/data/: processing.py
quati/gooogle/: spreadsheets.py  warehouse.py
quati/logger/: __init__.py
quati/msger/: mailing.py
quati/navigation/: automation.py
quati/scrapping/: selenium.py
quati/system/: unix.py
